# YotoWebMgr

./: .env.example  .gitignore  LICENSE  README.md  agents.md  fixes.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_create_users.py  0002_create_library_import_jobs_settings.py  0003_create_version_events.py  0004_processed_assets.py  0005_card_plan_parts.py  0006_yoto_playlist_drafts.py  0007_artwork_assets.py  0008_tags.py  0009_card_assignment_events.py  0010_yoto_credential_states.py  0011_yoto_playlist_versions.py  0012_import_review_fields.py  0013_card_scan_metadata.py  0014_card_scan_dumps.py  0015_card_programming_events.py  0016_card_programming_sessions.py  0017_card_programming_session_states.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  cards.py  health.py  imports.py  jobs.py  library.py  settings.py  tags.py  yoto.py
backend/app/core/: config.py
backend/app/db/: reset_database.py  session.py
backend/app/integrations/yoto/: __init__.py  playlist.py
backend/app/models/: __init__.py  artwork.py  card.py  imports.py  job.py  library.py  playlist.py  processed_asset.py  setting.py  tag.py  user.py  version.py  yoto.py
backend/app/schemas/: auth.py  foundation.py
backend/app/services/: auth.py  yoto_tokens.py
backend/tests/: test_alembic_revisions.py  test_auth.py  test_db_models.py  test_foundation_api.py  test_health.py
docs/: android-card-workflow.md  api.md  architecture.md  deployment.md  media-processing.md  roadmap.md  test-media.md  yoto-integration.md
docs/decisions/: 0001-initial-scaffold.md  0002-auth-scaffold.md
frontend/: Dockerfile  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/android/: .gitignore  capacitor.settings.gradle  keystore.properties.example
frontend/android/app/: build.gradle  capacitor.build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/res/values/: strings.xml
frontend/scripts/: build-android-apk.ps1  build_live_update_bundle.py
frontend/src/: App.css  App.tsx  api-config.ts  api.ts  index.css  vite-env.d.ts
k8s/base/: api.yaml  configmap.yaml  frontend.yaml  kustomization.yaml  namespace.yaml  persistentvolumeclaims.yaml  postgres.yaml  rbac.yaml  secrets.example.yaml  worker.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/scripts/: build-images.sh  deploy-dev.sh  ensure-dev-port-forward.sh  open-dev.sh
scripts/dev/: open-dev.ps1  redeploy.ps1  redeploy.sh  seed-radio.sh  status.sh  verify.sh
scripts/media/: seed-copyleft-test-media.sh
worker/: Dockerfile  pyproject.toml
worker/app/: __init__.py  worker.py
worker/app/artwork/: __init__.py  pixelise.py
worker/app/core/: __init__.py  config.py
worker/app/jobs/: __init__.py  runner.py
worker/app/media_tools/: __init__.py  probe.py  transcode.py
worker/app/yoto/: __init__.py
worker/tests/: test_job_runner.py  test_worker_config.py
(+1 files in other folders)
