[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yotowebmgr-backend"
version = "0.1.0"
description = "Backend API for YotoWebMgr"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-multipart>=0.0.9,<0.1.0",
  "pwdlib[argon2]>=0.2.0",
  "sqlalchemy>=2.0.32,<3.0.0",
  "alembic>=1.13.2,<2.0.0",
  "httpx>=0.27.0,<0.28.0",
  "psycopg[binary]>=3.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.6.2,<0.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
