[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yotowebmgr-worker"
version = "0.1.0"
description = "Background worker for YotoWebMgr"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "sqlalchemy>=2.0.32,<3.0.0",
  "httpx>=0.27.0,<0.28.0",
  "psycopg[binary]>=3.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0.0",
  "ruff>=0.6.2,<0.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
